--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Universe-Hub</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.3/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
+    <header class="text-center mt-6">
+        <h1 class="text-4xl font-bold">AI Universe Hub</h1>
+        <button class="btn bg-red-500 hover:bg-red-600 border-none mt-4">Sort By Date</button>
+    </header>
+    <main>
+        <!-- card container start  -->
+    </main>
 
+    <!-- script  -->
+    <script src="./javascript/app.js"></script>
 </body>
 
 </html>
