--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body onload="fetchAllData()">
     <header class="text-center mt-6">
         <h1 class="text-4xl font-bold">AI Universe Hub</h1>
         <button class="btn bg-red-500 hover:bg-red-600 border-none mt-4">Sort By Date</button>
     </header>
     <main>
-        <!-- card container start  -->
+        <!--! card container start  -->
+        <section>
+
+        </section>
+        <!--! card container end  -->
     </main>
 
     <!-- script  -->
