all data displayed on webpage

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     </header>
     <main>
         <!--! card container start  -->
-        <section>
+        <section class="mt-4 w-[90%] mx-auto">
+            <div id="card-container" class="grid grid-cols-3 gap-6">
 
+            </div>
         </section>
         <!--! card container end  -->
     </main>
