--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div id="card-container" class="grid grid-cols-3 gap-6">
 
             </div>
+            <div class="flex justify-center">
+                <button class="btn bg-red-500 hover:bg-red-600 border-none mt-8 mb-6 mx-auto">Show All</button>
+            </div>
+
         </section>
         <!--! card container end  -->
     </main>
