all showing single card details added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Universe-Hub</title>
+    <!-- daisyui cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.3/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- fontawesome cdn  -->
+    <script src="https://kit.fontawesome.com/8d318c79f1.js" crossorigin="anonymous"></script>
 </head>
 
 <body onload="fetchAllData()">
@@ -34,6 +37,10 @@
 
         </section>
         <!--! card container end  -->
+
+        <section id="details-modal">
+
+        </section>
     </main>
 
     <!-- script  -->
