modal fixed for showing data

--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
         </section>
         <!--! card container end  -->
 
-        <section id="details-modal">
+        <section>
+            <input type="checkbox" id="my-modal-3" class="modal-toggle" />
+            <div class="modal">
+                <div id="details-modal" class="w-[60%] custom-modal-width relative">
 
-
+                </div>
+            </div>
         </section>
     </main>
 
