--- a/test.html
+++ b/test.html
@@ -12,6 +12,9 @@
     <!-- fontawesome cdn  -->
     <script src="https://kit.fontawesome.com/8d318c79f1.js" crossorigin="anonymous"></script>
 </head>
+<style>
+
+</style>
 
 <body onload="fetchAllData()">
     <header class="text-center mt-6">
@@ -38,8 +41,13 @@
         </section>
         <!--! card container end  -->
 
-        <section id="details-modal">
-            <!-- The button to open modal -->
+        <section>
+            <input type="checkbox" id="my-modal-3" class="modal-toggle" />
+            <div class="modal rounded-md">
+                <div id="details-modal" class="w-[60%] custom-modal-width relative">
+
+                </div>
+            </div>
 
 
 
