--- a/hello.html
+++ b/hello.html
@@ -14,27 +14,29 @@
 </head>
 
 <body onload="fetchAllData()">
-    <div class="w-[50%] grid grid-cols-2 bg-red-300 p-6">
-        <div class="w-full px-4 bg-black">
+    <div class=" grid grid-cols-2 bg-red-300 p-6">
+        <div class="w-full px-4">
             <div>
-                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur magni culpa placeat ipsam ad
+                <h2 class="text-2xl font-semibold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur
+                    magni culpa
+                    placeat ipsam ad
                     explicabo repellat, eaque temporibus reprehenderit. Est?</h2>
             </div>
-            <div class="flex justify-between items-center">
-                <p>free of cost</p>
-                <p>free of cost</p>
-                <p>free of cost</p>
+            <div class="flex justify-between items-center my-5">
+                <p class="bg-white p-8 text-xl font-bold rounded">free of cost</p>
+                <p class="bg-white p-8 text-xl font-bold rounded">free of cost</p>
+                <p class="bg-white p-8 text-xl font-bold rounded">free of cost</p>
             </div>
             <div class="flex justify-between items-center ">
                 <div>
-                    <h3>header</h3>
-                    <p>helo</p>
+                    <h3 class="text-3xl font-semibold">header</h3>
+                    <p class="color-[#585858]">helo</p>
                     <p>helo</p>
                     <p>helo</p>
                 </div>
                 <div>
-                    <h3>header</h3>
-                    <p>helo</p>
+                    <h3 class="text-3xl font-semibold">header</h3>
+                    <p class="color-[#585858]">helo</p>
                     <p>helo</p>
                     <p>helo</p>
                 </div>
