--- a/test.html
+++ b/test.html
@@ -24,7 +24,7 @@
     <main>
         <!--! card container start  -->
         <section class="mt-4 w-[90%] mx-auto">
-            <div id="card-container" class="grid grid-cols-3 gap-6">
+            <div id="card-container" class="md:grid grid-cols-3 gap-6">
 
             </div>
 
