calender icon added before the published date

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Universe-Hub</title>
-    <!-- daisyui cdn  -->
+    <!-- daisyUI cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.3/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- fontawesome cdn  -->
+    <!-- font awesome cdn  -->
     <script src="https://kit.fontawesome.com/8d318c79f1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -22,7 +22,7 @@
         <!--! card container start  -->
         <section class="mt-4 w-[90%] mx-auto">
             <div id="card-container" class="md:grid grid-cols-3 gap-6">
-                <!-- showing all single data in this div  -->
+                <!-- showing all single data in this card container  -->
             </div>
 
             <div class="flex justify-center">
