--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
             <div class="flex justify-center">
                 <button onclick="showAllData()" id="show-all-btn"
-                    class="btn bg-red-500 hover:bg-red-600 border-none mt-8 mb-6 mx-auto hidden">Show
-                    All</button>
+                    class="btn bg-red-500 hover:bg-red-600 border-none mt-8 mb-6 mx-auto hidden">See More</button>
             </div>
 
             <!-- loader -->
